--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Doge-Bot",
+  "name": "",
   "version": "1.0.0",
   "description": "TOD",
   "main": "main.js",
@@ -58,15 +58,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yogipw/Self-Bot.git"
+    "url": "git+https://github.com/aju001/AJU-SER.git"
   },
   "keywords": [
     "Wasu"
   ],
-  "author": "WKWK",
+  "author": "AJU",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Hexagonz"
+    "url": "https://github.com/aju001"
   },
-  "homepage": "https://github.com/Hexagonz"
+  "homepage": "https://github.com/aju001"
 }
